# code/Logic/Shared/DTOs/BackupDto.cs
@@ -1,0 +1,13 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace SharedPublic.DTOs
+{
+    public class BackupDto
+    {
+        public string? BackupName { get; set; }
+    }
+}
